--- a/config/current.yaml
+++ b/config/current.yaml
@@ -2,30 +2,30 @@ expert_col: 'no'
 experts:
   critical:
     activation: tanh
-    dropout: 0
+    dropout: 0.0
     hidden_layers:
     - 512
     - 256
     - 128
     - 64
   extra:
-    activation: relu
-    dropout: 0
+    activation: gelu
+    dropout: 0.0
     hidden_layers:
     - 512
     - 256
     - 128
   gas:
     activation: gelu
-    dropout: 0
+    dropout: 0.0
     hidden_layers:
     - 512
     - 256
     - 128
     - 64
   liquid:
-    activation: relu
-    dropout: 0
+    activation: gelu
+    dropout: 0.0
     hidden_layers:
     - 512
     - 256
@@ -47,24 +47,83 @@ gate:
   - 64
 loss:
   extreme_alpha: 4.0
+  lambda_entropy: -0.01
   lambda_extreme: 1.0
-  lambda_nonneg: 3.079894566270446e-05
+  lambda_nonneg: 3.08e-05
   lambda_relative: 0.0
-  lambda_smooth: 0
+  lambda_smooth: 0.0
+  region_weights:
+    enabled: false
+    weights: {}
+  supervised: mse
+  target_normalize:
+    enabled: true
+    mode: per_target_std
 model:
   input_dim: 8
+  output_dim: 4
+optuna:
+  directions:
+  - minimize
+  - minimize
+  - minimize
+  enabled: false
+  n_trials: 50
+  sampler: tpe
+  search_space: {}
+  storage: null
+  study_name: uni_pvt_mo
 paths:
   data: data/Water.csv
-  save_dir: results/2026-01-10_23-26-58
-  scaler: results/2026-01-10_23-26-58/scaler.pkl
+  save_dir: results/2026-01-11_14-21-50
+  scaler: results/2026-01-11_14-21-50/scaler.pkl
+pinn:
+  R: 8.31446261815324
+  enabled: true
+  h_name: H (J/mol)
+  input_mode: reduced
+  lambda_H: 0.05
+  lambda_S: 0.05
+  lambda_phi: 0.05
+  p_feature: P (MPa)
+  p_to_Pa: 1.0e6
+  phi_name: phi (-)
+  s_name: S (J/mol/K)
+  schedule:
+    apply_in_finetune: true
+    apply_in_gate_train: true
+    apply_in_pretrain: false
+  t_feature: T (K)
+  z_name: Z (-)
 shap:
   enabled: true
+  max_samples: 2000
 targets:
 - Z (-)
 - phi (-)
+- H (J/mol)
+- S (J/mol/K)
 training:
   batch_size: 256
-  early_stopping_patience: 20
-  epochs: 200
-  learning_rate: 0.0016875946494005715
+  early_stopping:
+    enabled: true
+    min_delta: 0.0
+    patience: 20
+  finetune:
+    enabled: true
+    epochs: 80
+    learning_rate: 0.0007
+    unfreeze:
+    - gas
+    - liquid
+    - critical
+    - extra
+  gate_epochs: 200
+  gate_temperature_schedule:
+    enabled: true
+    end: 0.8
+    start: 1.5
+  learning_rate: 0.0017
   pretrain_epochs: 100
+  seed: 42
+  weight_decay: 0.0
